tests/samples/negative/generics/generic_type_alias_unsupported.ax
module generic_type_alias_unsupported;

type Boxed[T] = T;

fn main() -> i32 {
    return 0;
}
